[gd_scene load_steps=9 format=3 uid="uid://c5pvbt84a656d"]

[ext_resource type="Script" path="res://Credits.gd" id="1_ca66x"]
[ext_resource type="FontFile" uid="uid://cdfafwjg3xnk2" path="res://assets/Don_Quixote.ttf" id="2_3rjo8"]
[ext_resource type="FontFile" uid="uid://c1xq7d3mhuvt5" path="res://assets/Guttenbg.ttf" id="2_fjxof"]
[ext_resource type="PackedScene" uid="uid://dyj7w4bn7bmcb" path="res://BackButton.tscn" id="2_kyay4"]
[ext_resource type="AudioStream" uid="uid://dvh7btsjwicbs" path="res://assets/Victory.mp3" id="5_ey4up"]

[sub_resource type="LabelSettings" id="LabelSettings_d87yp"]
font = ExtResource("2_fjxof")
font_size = 75
font_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r1ee5"]
font = ExtResource("2_3rjo8")
font_size = 80
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cptgu"]
font = ExtResource("2_3rjo8")
font_size = 130
font_color = Color(0, 0, 0, 1)

[node name="Credits" type="Node2D"]
script = ExtResource("1_ca66x")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(800, 800)
offset_right = 800.0
offset_bottom = 800.0
color = Color(0.968627, 0.952941, 0.968627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsTitle" type="Label" parent="Background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Donec eris felix, multos numerabis amicos"
label_settings = SubResource("LabelSettings_d87yp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScrollCredits" type="ScrollContainer" parent="Background/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 600)
layout_mode = 2

[node name="Credits" type="VBoxContainer" parent="Background/VBoxContainer/ScrollCredits"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Background/VBoxContainer/ScrollCredits/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Idea original, diseño y programación:"
label_settings = SubResource("LabelSettings_r1ee5")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Background/VBoxContainer/ScrollCredits/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Jynus"
label_settings = SubResource("LabelSettings_cptgu")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Background/VBoxContainer/ScrollCredits/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Especiales gracias a:"
label_settings = SubResource("LabelSettings_r1ee5")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Background/VBoxContainer/ScrollCredits/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Rocío
PSuzume
NiadeCode
Endorth
Montxaldre
Ezoniev"
label_settings = SubResource("LabelSettings_cptgu")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Background/VBoxContainer/ScrollCredits/Credits"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Usuarios (en orden de aparición):"
label_settings = SubResource("LabelSettings_r1ee5")
horizontal_alignment = 1

[node name="BackButton" parent="." instance=ExtResource("2_kyay4")]
offset_left = 21.0
offset_top = 37.0
offset_right = 135.0
offset_bottom = 113.0

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ey4up")
volume_db = -20.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
